{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 48,
  "lineage": "a6bccf31-3355-1627-47c4-605275c2d146",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dsit-llmlite-gateway-main-nat-eu-west-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e95cebf2e5b1baa1",
            "arn": "arn:aws:ec2:eu-west-2:072136646002:elastic-ip/eipalloc-0e95cebf2e5b1baa1",
            "association_id": "eipassoc-063e2f1a2b32fd03c",
            "domain": "vpc",
            "id": "eipalloc-0e95cebf2e5b1baa1",
            "network_border_group": "eu-west-2",
            "private_dns": "ip-18-175-107-182.eu-west-2.compute.internal",
            "private_ip": "18.175.107.182",
            "public_dns": "ec2-18-175-107-182.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.175.107.182",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dsit-llmlite-gateway-main-nat-eu-west-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0bd785601445180",
            "arn": "arn:aws:ec2:eu-west-2:072136646002:elastic-ip/eipalloc-0b0bd785601445180",
            "association_id": "eipassoc-08b7350099ae79ad0",
            "domain": "vpc",
            "id": "eipalloc-0b0bd785601445180",
            "network_border_group": "eu-west-2",
            "private_dns": "ip-13-42-207-69.eu-west-2.compute.internal",
            "private_ip": "13.42.207.69",
            "public_dns": "ec2-13-42-207-69.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.207.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dsit-llmlite-gateway-main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:internet-gateway/igw-072726bf27f2c7493",
            "id": "igw-072726bf27f2c7493",
            "owner_id": "072136646002",
            "tags": {
              "Name": "dsit-llmlite-gateway-main-igw"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-igw"
            },
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dsit-llmlite-gateway-main-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:072136646002:loadbalancer/app/dsit-llmlite-gateway-main-alb/8fde777daec3f125",
            "arn_suffix": "app/dsit-llmlite-gateway-main-alb/8fde777daec3f125",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dsit-llmlite-gateway-main-alb-1754853727.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:072136646002:loadbalancer/app/dsit-llmlite-gateway-main-alb/8fde777daec3f125",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dsit-llmlite-gateway-main-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d57a68abe5cdaba4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0310f584f58ff14b6"
              },
              {
                "subnet_id": "subnet-08ea423079f9d34de"
              }
            ],
            "subnets": [
              "subnet-0310f584f58ff14b6",
              "subnet-08ea423079f9d34de"
            ],
            "vpc_id": "vpc-0b5fd89b4223abdc9",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dsit-litellm-tg-4000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:072136646002:targetgroup/dsit-litellm-tg-4000/7843fa0003556ddc",
            "arn_suffix": "targetgroup/dsit-litellm-tg-4000/7843fa0003556ddc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/health/liveliness",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:072136646002:targetgroup/dsit-litellm-tg-4000/7843fa0003556ddc",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:072136646002:loadbalancer/app/dsit-llmlite-gateway-main-alb/8fde777daec3f125"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dsit-litellm-tg-4000",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dsit-llmlite-gateway-main-nat-eu-west-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "public",
            "id": "nat-1766d32e38494d5e2",
            "secondary_allocation_ids": [
              "eipalloc-080bcb13b6e9a379a",
              "eipalloc-0e95cebf2e5b1baa1"
            ],
            "secondary_private_ip_address_count": 0,
            "tags": {
              "Name": "dsit-llmlite-gateway-main-nat-eu-west-2a"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-nat-eu-west-2a"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dsit-llmlite-gateway-main-nat-eu-west-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "public",
            "id": "nat-1374a32db29b24b93",
            "secondary_allocation_ids": [
              "eipalloc-0b0bd785601445180",
              "eipalloc-0e6e93cfd09b860fb"
            ],
            "secondary_private_ip_address_count": 0,
            "tags": {
              "Name": "dsit-llmlite-gateway-main-nat-eu-west-2b"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-nat-eu-west-2b"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "dsit-llmlite-gateway-main-public-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:network-acl/acl-0ec40d6a7707c8c05",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0ec40d6a7707c8c05",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "072136646002",
            "subnet_ids": [
              "subnet-0310f584f58ff14b6",
              "subnet-08ea423079f9d34de"
            ],
            "tags": {
              "Name": "dsit-llmlite-gateway-main-public-nacl"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-public-nacl"
            },
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dsit-llmlite-gateway-main-private-rt-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:route-table/rtb-01741c1b4cfae92c7",
            "id": "rtb-01741c1b4cfae92c7",
            "owner_id": "072136646002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-1766d32e38494d5e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dsit-llmlite-gateway-main-private-rt-2a"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-private-rt-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dsit-llmlite-gateway-main-private-rt-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:route-table/rtb-068d6b7b95412ca2b",
            "id": "rtb-068d6b7b95412ca2b",
            "owner_id": "072136646002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-1374a32db29b24b93",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dsit-llmlite-gateway-main-private-rt-2b"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-private-rt-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dsit-llmlite-gateway-main-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:route-table/rtb-06335f764ef3fbfe6",
            "id": "rtb-06335f764ef3fbfe6",
            "owner_id": "072136646002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072726bf27f2c7493",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dsit-llmlite-gateway-main-route-table"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dsit-llmlite-gateway-main-private-rt-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5929d92e4355001",
            "route_table_id": "rtb-01741c1b4cfae92c7",
            "subnet_id": "subnet-0e8e7db9f4c2f4619"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dsit-llmlite-gateway-main-private-rt-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084727befc2be470f",
            "route_table_id": "rtb-068d6b7b95412ca2b",
            "subnet_id": "subnet-0b9b1a86f2bd6f921"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dsit-llmlite-gateway-main-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc613e999fce4df9",
            "route_table_id": "rtb-06335f764ef3fbfe6",
            "subnet_id": "subnet-0310f584f58ff14b6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dsit-llmlite-gateway-main-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:security-group/sg-0d57a68abe5cdaba4",
            "description": "Security group for dsit-llmlite-gateway-main ALB",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-07a7dea82a134b0c8"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d57a68abe5cdaba4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from the Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from the Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dsit-llmlite-gateway-main-alb-sg",
            "name_prefix": "",
            "owner_id": "072136646002",
            "revoke_rules_on_delete": null,
            "tags": {
              "Component": "load-balancer",
              "Envirronment": "main",
              "Name": "dsit-llmlite-gateway-main-alb-sg",
              "Project": "dsit-aica-llmlite-gateway"
            },
            "tags_all": {
              "Component": "load-balancer",
              "Envirronment": "main",
              "Name": "dsit-llmlite-gateway-main-alb-sg",
              "Project": "dsit-aica-llmlite-gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dsit-llmlite-gateway-main-bedrock-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:security-group/sg-0e2fac28cbfe8b0a5",
            "description": "Allows HTTPS traffic from Fargate to connect to Amazon Bedrock.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2fac28cbfe8b0a5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a7dea82a134b0c8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dsit-llmlite-gateway-main-bedrock-vpce",
            "name_prefix": "",
            "owner_id": "072136646002",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "dsit-llmlite-gateway-main-bedrock-sg"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-bedrock-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dsit-llmlite-gateway-main-fargate-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:security-group/sg-07a7dea82a134b0c8",
            "description": "Allows ALB to acess the Fargate Service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-042eb3ca28cbe1b1a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-07a7dea82a134b0c8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d57a68abe5cdaba4"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dsit-llmlite-gateway-main-fargate-sg",
            "name_prefix": "",
            "owner_id": "072136646002",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "dsit-llmlite-gateway-main-fargate-sg"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-fargate-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dsit-llmlite-gateway-main-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:security-group/sg-042eb3ca28cbe1b1a",
            "description": "Allow access to LiteLLM PostgreSQL database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042eb3ca28cbe1b1a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a7dea82a134b0c8"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dsit-llmlite-gateway-main-rds-sg",
            "name_prefix": "",
            "owner_id": "072136646002",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "dsit-llmlite-gateway-main-rds-sg"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dsit-llmlite-gateway-main-database-eu-west-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:subnet/subnet-052358aaa1ec9d954",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052358aaa1ec9d954",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072136646002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dsit-llmlite-gateway-main-database-eu-west-2a"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-database-eu-west-2a"
            },
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dsit-llmlite-gateway-main-database-eu-west-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:subnet/subnet-0c8c3706a833bcb6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8c3706a833bcb6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072136646002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dsit-llmlite-gateway-main-database-eu-west-2b"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-database-eu-west-2b"
            },
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dsit-llmlite-gateway-main-private-eu-west-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:subnet/subnet-0e8e7db9f4c2f4619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8e7db9f4c2f4619",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072136646002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dsit-llmlite-gateway-main-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-private-eu-west-2a"
            },
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dsit-llmlite-gateway-main-private-eu-west-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:subnet/subnet-0b9b1a86f2bd6f921",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9b1a86f2bd6f921",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072136646002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dsit-llmlite-gateway-main-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-private-eu-west-2b"
            },
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dsit-llmlite-gateway-main-public-eu-west-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:subnet/subnet-08ea423079f9d34de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ea423079f9d34de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072136646002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dsit-llmlite-gateway-main-public-eu-west-2a"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-public-eu-west-2a"
            },
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dsit-llmlite-gateway-main-public-eu-west-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:subnet/subnet-0310f584f58ff14b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0310f584f58ff14b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072136646002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dsit-llmlite-gateway-main-public-eu-west-2b"
            },
            "tags_all": {
              "Name": "dsit-llmlite-gateway-main-public-eu-west-2b"
            },
            "vpc_id": "vpc-0b5fd89b4223abdc9"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dsit-litellm-gateway-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:072136646002:vpc/vpc-0b5fd89b4223abdc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/20",
            "default_network_acl_id": "acl-044b7f7c47a552bbd",
            "default_route_table_id": "rtb-0b95cb5d7ddee8676",
            "default_security_group_id": "sg-032b5d79b1050a33e",
            "dhcp_options_id": "dopt-01d2f5f160d2fe61c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5fd89b4223abdc9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b95cb5d7ddee8676",
            "owner_id": "072136646002",
            "tags": {
              "Name": "dsit-litellm-gateway-main"
            },
            "tags_all": {
              "Name": "dsit-litellm-gateway-main"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}